# ciphertools-rs

./: .gitignore  .rustfmt.toml  Cargo.toml
.helix/: languages.toml
binaries/ciphertools/: Cargo.toml
binaries/ciphertools-dev/: Cargo.toml
binaries/ciphertools-dev/src/: main.rs
binaries/ciphertools/src/: main.rs  manager.rs  scoreboard.rs  threads.rs
binaries/ciphertools/src/cli/: autokey.rs  caesar.rs  mod.rs  substitution.rs
crates/cipher/: Cargo.toml
crates/cipher-derive/: Cargo.toml
crates/cipher-derive/src/: lib.rs
crates/cipher/resources/raw/languages/english/: english_2grams.csv
crates/cipher/src/: alphabet.rs  language.rs  lib.rs  quipqiup.rs  resources.rs  tests.rs
crates/cipher/src/cipher/: mod.rs
crates/cipher/src/cipher/autokey/: mod.rs  tests.rs
crates/cipher/src/cipher/autokey/snapshots/: cipher__cipher__autokey__tests__include_whitespace.snap  cipher__cipher__autokey__tests__skip_whitespace.snap  ciphertools__cipher__autokey__tests__include_whitespace.snap  ciphertools__cipher__autokey__tests__skip_whitespace.snap
crates/cipher/src/cipher/caesar/: mod.rs
crates/cipher/src/cipher/caesar/snapshots/: cipher__cipher__caesar__tests__latin_a_no_spaces.snap  cipher__cipher__caesar__tests__latin_a_spaces.snap  cipher__cipher__caesar__tests__latin_b_no_spaces.snap  cipher__cipher__caesar__tests__latin_b_spaces.snap  ciphertools__cipher__caesar__tests__latin_a_spaces.snap  ciphertools__cipher__caesar__tests__latin_b_no_spaces.snap
crates/cipher/src/cipher/substitution/: mod.rs  quipqiup.rs  tests.rs
crates/cipher/src/cipher/substitution/snapshots/: cipher__cipher__substitution__tests__include_whitespace.snap
crates/cipher/src/cipher/vigenere/: mod.rs
crates/cipher/src/cipher/vigenere/snapshots/: cipher__cipher__vigenere__tests__include_whitespace.snap  cipher__cipher__vigenere__tests__skip_whitespace.snap  ciphertools__cipher__vigenere__tests__include_whitespace.snap
crates/stutter-zip/: Cargo.toml
crates/stutter-zip/src/: lib.rs
resources/languages/: english.json
src/: alphabet.rs  ciphertools_dev.rs  language.rs  main.rs  manager.rs  ngrams.rs  tests.rs
src/cipher/: autokey.rs  caesar.rs  mod.rs  substitution.rs  vigenere.rs
src/cipher/autokey/: mod.rs
src/cipher/autokey/snapshots/: ciphertools__cipher__autokey__tests__include_whitespace.snap.new  ciphertools__cipher__autokey__tests__skip_whitespace.snap.new
src/cipher/caesar/: tests.rs
src/cipher/caesar/snapshots/: ciphertools__cipher__caesar__tests__latin_a_no_spaces.snap  ciphertools__cipher__caesar__tests__latin_b_spaces.snap
src/cipher/substitution/: mod.rs
src/cipher/vigenere/: mod.rs  tests.rs
src/cipher/vigenere/snapshots/: ciphertools__cipher__vigenere__tests__skip_whitespace.snap
src/cli/: autokey.rs  mod.rs  vigenere.rs
