[workspace]
members = [
  "binaries/ciphertools",
  "binaries/ciphertools-dev",
]
resolver = "3"

[workspace.package]
edition = "2024"
publish = false
version = "0.1.0"

[workspace.lints.clippy]
needless_lifetimes = "deny"

[workspace.lints.rust]
warnings = "deny"

[workspace.dependencies]
cipher.path = "crates/cipher"
stutter_zip.path = "crates/stutter-zip"
