[package]
edition.workspace = true
name = "ciphertools"
version.workspace = true

[lints]
workspace = true

[profile.release]
debug = true

[[bin]]
name = "ciphertools"
path = "src/main.rs"

[dependencies]
cipher.workspace = true

ahash = { version = "*", features = ["serde"] }
clap = { version = "*", features = ["derive"] }
csv = "*"
itertools = "*"
log= "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"

[dev-dependencies]
insta = "*"
once_cell = "*"
