[package]
edition.workspace = true
name = "ciphertools"
version.workspace = true

[lints]
workspace = true

[[bin]]
name = "ciphertools"
path = "src/main.rs"

[dependencies]
cipher.workspace = true

ahash.workspace = true
async-channel.workspace = true
clap.workspace = true
crossbeam.workspace = true
csv.workspace = true
futures.workspace = true
itertools.workspace = true
log.workspace = true
num_cpus.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta = "*"
once_cell = "*"
