[package]
edition.workspace = true
name = "cipher"
publish.workspace = true
version.workspace = true

[lib]
name = "cipher"

[lints]
workspace = true

[dependencies]
stutter_zip.workspace = true
cipher_derive.workspace = true

ahash.workspace = true
clap.workspace = true
csv.workspace = true
itertools.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta = "*"
once_cell = "*"
